  directly by the target node limit within the heuristic
- removed parameter "presolving/symmetry/computepresolved" since this presolver does not compute symmetries independent
  of other components anymore

deleted files:
- presol_implfree removed

misc:
- updated CppAD to version 20180000.0
- add statistic that presents the number of resolves for instable LPs


SCIP version 5.0.2
=================

performance improvements:
- deactivate gauge cuts

fixed bugs:
- suppress debug solution warnings during problem creation stage
- fixed check for activated debugging solution in components constraint handler
- fixed potential bug concerning solution linking to LP in SCIPperformGenericDivingAlgorithm()
- fixed reward computation in ALNS on continuous, especially nonlinear, problems
- fixed bug in freeing reoptimization data if problem was solved during presolving
- fixed check of timing in heur_completesol
- fixed wrong propagation in optcumulative constraint handler
- fixed non-deterministic behavior in OBBT propagator
- don't disable LP presolving when using Xpress as LP solver
- fixed possible NULL pointer usage in cons_pseudoboolean
- ensured that SCIPgetDualbound() returns global dual bound instead of the dual bound of the remaining search tree
- fixed rare division-by-zero when solving bivariate quadratic interval equation
- use total memory for triggering memory saving mode
- fix parsing of version number in the CMake module for Ipopt
- fixed handling of implicit integer variables when attempting to solve sub-MIP in nlpdiving heuristic
- added workaround for bug when solving certain bivariate quadratic interval equations with unbounded second variable

data structures:
- expression interpreter objects are now stored in the block memory


SCIP version 5.0.1
==================

performance improvements:
- increased threshold when to scale up cuts that are generated by nonlinear constraint handlers