@@ -51,7 +51,7 @@ option(IPOPT "should ipopt be linked" ON)
 option(WORHP "should worhp be linked" OFF)
 option(PARASCIP "should scip be compiled thread safe" OFF)
 option(LPSCHECK "double check SoPlex results with CPLEX" OFF)
-option(LEGACY "build SCIP/SoPlex in legacy mode" OFF)
+option(LEGACY "build SCIP/SoPlex in legacy mode (spx1 interface)" OFF)
 option(NOBLKBUFMEM "should block and buffer memory be disabled" OFF)
 option(NOBLKMEM "should block and buffer memory be disabled" OFF)
 option(NOBUFMEM "should block and buffer memory be disabled" OFF)
@@ -158,14 +158,6 @@ if(NOT PARASCIP)
     add_definitions(-DNPARASCIP)
 endif()
 
-#check if legacy mode must be used
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.7")
-        set(LEGACY ON)
-    endif()
-endif()
-message(STATUS "LEGACY mode for old compilers: ${LEGACY}")
-
 set(NEWLINE "\\\\n")
 
 # create a target for updating the current git hash
@@ -271,8 +263,7 @@ if(SOPLEX_FOUND)
         set(LPS_PIC_LIBRARIES ${LPS_LIBRARIES})
     endif()
     if(LEGACY)
-      set(lpi lpi/lpi_spx1.cpp)
-      set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTHREADLOCAL='' -DSOPLEX_LEGACY")
+        set(lpi lpi/lpi_spx1.cpp)
     else()
         set(lpi lpi/lpi_spx2.cpp)
     endif()
