@@ -80,6 +80,7 @@ deleted files:
 misc:
 - updated CppAD to version 20180000.0
 - add statistic that presents the number of resolves for instable LPs
+- remove LEGACY mode, compiler needs to be C++11-compliant
 
 
 SCIP version 5.0.2
